# PhytoMiner

./: .gitignore  README.md  pyproject.toml  workflow.py
.github/workflows/: python-publish.yml
phytominer/: __init__.py  api.py  config.py  data.py  processing.py  utils.py  workflow.py
phytozome_fetcher/: __init__.py  data.py
tests/: test1.py  test_api.py  test_processing.py  test_workflows.py
