[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phytozome-fetcher"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A Python library to fetch and process homolog data from Phytozome."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pandas",
    "intermine",
    "seaborn",
    "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com/your-username/phytozome-fetcher"
"Bug Tracker" = "https://github.com/your-username/phytozome-fetcher/issues"

